fix overflow x

--- a/src/components/layout/content/_content.scss
+++ b/src/components/layout/content/_content.scss
@@ -4,6 +4,7 @@
 .site-content {
     flex-grow: 1;
     overflow-y: auto;
+    overflow-x: hidden;
     display: flex;
     flex-direction: column;
 
